--- a/style/style_index.css
+++ b/style/style_index.css
@@ -18,7 +18,7 @@ body {
 }
 
 nav div {
-  padding: 0px 10px;
+  padding: 0px 5%;
   position: fixed;
   width: 100%;
   padding-top: 5px;
@@ -38,8 +38,8 @@ header div {
   background-image: url("../resource/images/imgHeader.jpg");
   background-size: cover;
   background-position: center;
-  height: 35vh;
-  padding: 10px;
+  height: 25vh;
+  padding: 25px 10px;
   color: white;
 }
 
@@ -58,14 +58,14 @@ main .frase {
   background-color: #1B262C;
   padding: 0px 30px;
   display: flex;
+  justify-content: center;
   align-items: center;
   color: #BBE1FA;
   text-align: center;
-  justify-content: center;
 }
 
 main .frase h2 {
-  font-size: 1.9rem;
+  font-size: 1.27rem;
 }
 
 main .lugaresVisitar .btn-ver-mas {
@@ -77,7 +77,7 @@ main .lugaresVisitar div {
   background-position: center;
   height: auto;
   color: white;
-  padding: 20% 10px 10px 10px;
+  padding: 30% 10px 25px 10px;
 }
 
 main .lugaresVisitar div a {
@@ -85,11 +85,11 @@ main .lugaresVisitar div a {
 }
 
 main .lugaresVisitar div h2 {
-  font-size: 4rem;
+  font-size: 2.5rem;
 }
 
 main .lugaresVisitar div p {
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 main .lugaresVisitar .lugar1 {
@@ -114,135 +114,105 @@ footer {
 }
 
 @media (min-width: 480px) {
-  nav div {
-    padding: 0px 10px;
-    padding-top: 5px;
-  }
-  nav div a {
-    font-size: 3rem;
-  }
   header div {
-    height: 32vh;
+    height: 25vh;
+    padding-left: 5%;
   }
   header div h1 {
-    max-width: 80%;
-    font-size: 11vw;
+    margin-top: 6%;
+    max-width: 50%;
+    font-size: 7.5vw;
   }
   main .frase {
-    height: 25vh;
+    height: 20vh;
     padding: 0px 30px;
   }
   main .frase h2 {
-    font-size: 7vw;
+    font-size: 1.8rem;
   }
   main .lugaresVisitar div {
-    padding: 20% 20px 10px 20px;
-  }
-  main .lugaresVisitar div a {
-    cursor: pointer;
+    padding-left: 30px;
   }
   main .lugaresVisitar div h2 {
-    font-size: 12vw;
+    font-size: 3rem;
   }
   main .lugaresVisitar div p {
-    font-size: 5vw;
+    font-size: 1.2rem;
   }
 }
 
 @media (min-width: 768px) {
-  nav div {
-    padding: 0px 5%;
-    padding-top: 5px;
-  }
   nav div a {
-    font-size: 3rem;
-  }
-  header div {
-    height: 60vh;
-    padding-left: 5%;
-  }
-  header div h1 {
-    max-width: 80%;
-    font-size: 10vw;
-  }
-  header div p {
-    margin-top: 40px;
-    display: block;
-    width: 50%;
-    font-size: 2vw;
+    font-size: 4rem;
   }
   main .frase {
-    height: 50vh;
-    padding: 0px 30px;
+    height: 25vh;
   }
-  main .frase h2 {
-    font-size: 6.3vw;
-  }
-  main .lugaresVisitar div {
-    padding: 20% 5% 5% 5%;
-  }
-  main .lugaresVisitar div h2 {
-    font-size: 12vw;
-  }
-  main .lugaresVisitar div p {
-    font-size: 5vw;
+  header div h1 {
+    margin-top: 50px;
+    font-size: 4rem;
   }
 }
 
 @media (min-width: 992px) {
   nav div {
     padding: 0px 5%;
-    padding-top: 5px;
   }
   nav div a {
-    font-size: 2rem;
+    font-size: 4rem;
   }
   header div {
-    height: 70vh;
-    padding-left: 5%;
+    height: 50vh;
     padding-right: 10%;
-    padding-left: 12%;
+    padding-left: 10%;
   }
   header div h1 {
-    max-width: 80%;
-    font-size: 10vw;
+    margin-top: 20%;
+    width: 65%;
+    font-size: 4.5rem;
   }
   header div p {
-    width: 35%;
-    font-size: 1.6vw;
+    display: block;
+    width: 25%;
+    font-size: 1.2rem;
     float: right;
-    margin-top: 0;
   }
   main .frase {
-    height: 50vh;
+    height: 40vh;
     padding: 0px 10%;
   }
   main .frase h2 {
-    font-size: 2.8vw;
+    font-size: 2.5rem;
   }
   main .lugaresVisitar div {
-    text-align: center;
-    align-items: center;
+    padding: 10px;
+    padding: 0px 5%;
+    padding-top: 3%;
+    padding-bottom: 2%;
   }
-  main .lugaresVisitar div h2 {
-    font-size: 4vw;
-    margin-bottom: 40px;
+  main .lugaresVisitar div a {
+    text-align: center;
+  }
+  main .lugaresVisitar div a h2 {
+    margin-top: 10%;
+    font-size: 5vw;
   }
   main .lugaresVisitar div .btn-ver-mas {
+    display: block;
     text-align: center;
-    display: inline-block;
-    font-size: 1.2rem;
-    border: 2px white solid;
+    margin-top: 20px;
+  }
+  main .lugaresVisitar div .btn-ver-mas a {
+    display: inline;
+    border: white solid 3px;
     padding: 8px;
-    font-weight: 900;
-    margin: auto;
-    cursor: pointer;
-    text-shadow: 0 0 2px #00004a;
+    font-size: 2rem;
   }
   main .lugaresVisitar div p {
+    display: block;
     font-size: 2vw;
-    margin-top: 40px;
-    float: left;
+    margin-top: 10%;
+    margin-bottom: 15px;
   }
   footer {
     font-size: 3rem;
@@ -250,43 +220,25 @@ footer {
 }
 
 @media (min-width: 1200px) {
-  nav div {
-    padding: 0px 5%;
-    padding-top: 5px;
-  }
-  nav div a {
-    font-size: 2rem;
-  }
   header div {
     height: 70vh;
   }
   header div h1 {
-    max-width: 60%;
-    font-size: 7vw;
+    margin-top: 200px;
+    width: 65%;
+    font-size: 8vw;
+    font-size: 6vw;
   }
   header div p {
-    width: 20%;
-    font-size: 1.2vw;
+    font-size: 1.5rem;
+  }
+  footer p {
+    font-size: 1.2rem;
   }
 }
 
 @media (min-width: 1400px) {
-  nav div {
-    padding: 0px 5%;
-    padding-top: 5px;
-  }
-  nav div a {
-    font-size: 2rem;
-  }
   header div {
     height: 100vh;
-  }
-  header div h1 {
-    max-width: 60%;
-    font-size: 7vw;
-  }
-  header div p {
-    width: 20%;
-    font-size: 1.2vw;
   }
 }
