--- a/style/style_index.css
+++ b/style/style_index.css
@@ -8,8 +8,10 @@
   font-style: italic;
 }
 
-* a {
+* a:link, * a:visited, * a:active {
+  text-decoration: none;
   cursor: pointer;
+  color: white;
 }
 
 body {
