--- a/style/style_index.css
+++ b/style/style_index.css
@@ -40,7 +40,6 @@ header div {
   background-image: url("../resource/images/imgHeader.jpg");
   background-size: cover;
   background-position: center;
-  height: 25vh;
   padding: 25px 10px;
   color: white;
 }
@@ -56,7 +55,6 @@ header div p {
 }
 
 main .frase {
-  height: 25vh;
   background-color: #1B262C;
   padding: 0px 30px;
   display: flex;
@@ -64,6 +62,8 @@ main .frase {
   align-items: center;
   color: #BBE1FA;
   text-align: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 main .frase h2 {
@@ -117,7 +117,6 @@ footer {
 
 @media (min-width: 480px) {
   header div {
-    height: 25vh;
     padding-left: 5%;
   }
   header div h1 {
@@ -126,8 +125,7 @@ footer {
     font-size: 7.5vw;
   }
   main .frase {
-    height: 20vh;
-    padding: 0px 30px;
+    padding: 30px 30px;
   }
   main .frase h2 {
     font-size: 1.8rem;
@@ -147,9 +145,6 @@ footer {
   nav div a {
     font-size: 4rem;
   }
-  main .frase {
-    height: 25vh;
-  }
   header div h1 {
     margin-top: 50px;
     font-size: 4rem;
@@ -164,24 +159,20 @@ footer {
     font-size: 4rem;
   }
   header div {
-    height: 50vh;
     padding-right: 10%;
     padding-left: 10%;
+    height: 400px;
   }
   header div h1 {
-    margin-top: 20%;
+    margin-top: 60px;
     width: 65%;
-    font-size: 4.5rem;
+    font-size: 4rem;
   }
   header div p {
     display: block;
     width: 25%;
-    font-size: 1.2rem;
+    font-size: 1rem;
     float: right;
-  }
-  main .frase {
-    height: 40vh;
-    padding: 0px 10%;
   }
   main .frase h2 {
     font-size: 2.5rem;
@@ -223,16 +214,15 @@ footer {
 
 @media (min-width: 1200px) {
   header div {
-    height: 70vh;
+    height: 800px;
   }
   header div h1 {
     margin-top: 200px;
     width: 65%;
-    font-size: 8vw;
-    font-size: 6vw;
+    font-size: 4.5rem;
   }
   header div p {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
   footer p {
     font-size: 1.2rem;
@@ -240,7 +230,13 @@ footer {
 }
 
 @media (min-width: 1400px) {
-  header div {
-    height: 100vh;
+  header div h1 {
+    margin-top: 80px;
+    width: 80%;
+    font-size: 7rem;
+  }
+  header div p {
+    width: 20%;
+    font-size: 1rem;
   }
 }
